--- a/gb/23/1/31/n13919204.md
+++ b/gb/23/1/31/n13919204.md
@@ -8,7 +8,7 @@
 <hr>
 	<p>【大纪元2023年01月31日讯】（大纪元记者林宜君<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>报导）纽约市游民局（NYC DHS）与收容所承办机构“关怀游民”（Care For the Homeless）30年3亿美元的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%9C%E7%99%BE%E8%80%81%E6%B1%87.md#1">东百老汇</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B8%B8%E6%B0%91%E6%89%80.md#1">游民所</a>项目，上周六开始拆除金汇大酒店内部的石棉，工程预计到明年1月4日才能完工。</p>
 <p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>大学（NYU）朗格医学中心胸腔科医师陈建闪（Thomas Chan）密切关注石棉拆除工程对华埠居民健康的影响，他向《大纪元时报》指出，华社目前迫切需要的是老人经济住房，而民团“大华埠民权联盟”（Great Chinatown Civic Coalition，简称GCCC）也将采取法律行动，挑战市府的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B8%B8%E6%B0%91%E6%89%80.md#1">游民所</a>政策。</p>
-<p>陈建闪周一（30日）受访时表示，华埠社区上周六（28日）才知道“关怀游民”开始拆除石棉作业。但是，石棉颗粒小到“连N95口罩都挡不了”，且长期吸入石绵可能导致石棉肺（asbestosis）或间皮瘤（mesothelioma）。等到民众发现自己健康出状况，“可能是10年以后的事了”。</p>
+<p>陈建闪周一（30日）受访时表示，华埠社区上周六（28日）才知道“关怀游民”开始拆除石棉作业。但是，石棉颗粒小到“连N95口罩都挡不了”，且长期吸入石绵可能导致肺癌、石棉肺（asbestosis）或间皮瘤（mesothelioma）。等到民众发现自己健康出状况，“可能是10年以后的事了”。</p>
 <p>由于社区不清楚“关怀游民”是否妥善处理石棉，陈建闪表示，“大华埠公民联盟”30日委托律师写信给“关怀游民”，了解石棉移除工程的作业是否合法。倘若不合法或黑箱作业，联盟将向法庭申请“禁制令”（injunction），要求91号<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%9C%E7%99%BE%E8%80%81%E6%B1%87.md#1">东百老汇</a>游民所停工。</p>
 <figure id="attachment_13919205" aria-describedby="caption-attachment-13919205" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13919205-163750-e1675143667938.jpg"><img class="size-medium wp-image-13919205" src="https://i.epochtimes.com/assets/uploads/2023/01/id13919205-163750-450x360.jpg" alt="" width="450" b="360" /></a><figcaption id="caption-attachment-13919205" class="wp-caption-text">纽约市曼哈顿东百老汇91号的石棉拆除作业将从今年1月12日延续至2024年1月4日。（大纪元合成）</figcaption></figure>
 <p>据纽约市财政局（NYC DOF）公布，“关怀游民”去年12月29日花了1,650万美元，向金汇酒店（Hotel 91）的业主李美兰（Meilan Lee，音译）购入物业。</p>
@@ -33,31 +33,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/17/n10064050.md#1" target="_blank">袁斌：由谍战剧《风筝》说到中共特工的命运</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/12/n11717665.md#1" target="_blank">国际人权日 美多位议员谴责中共迫害法轮功</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/20/2/7/n11852128.md#1">《刘伯温碑记》点明避开瘟疫的真言</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/1/13/n4615407.md#1" target="_blank">怪病神奇痊愈的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914722.md#1">濒死女子见到前世与未来景象 了解人生目的</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917279.md#1">抓捕传闻纷扰 江泽民嫡孙能躲过大劫吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916753.md#1">目睹仓鼠死亡时灵魂上升 英女人生从此改观</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890743.md#1">【百年真相】株连六万人 小说成中共内斗“杀器”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13903795.md#1">神仙故事：明朝人奇遇王重阳，学剑仙之术</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918670.md#1">【中国禁闻】知名人权活动家：李大师揭真相救人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918835.md#1">【新闻大家谈】习下密令 2025台海开战？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918984.md#1">【神韵早期节目】金刚僧（2015年制作）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917798.md#1">胡鑫宇案官方通报被指疑点重重 舆论沸腾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917542.md#1">官方称在学校附近找到胡鑫宇尸体 再引质疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914456.md#1">在Costco可买到七种意想不到的东西</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917383.md#1">因挺白纸革命？女星春夏遭春晚和新片双除名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13916993.md#1">金钟视帝丁强惊传初六逝世 经纪人证实</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13918066.md#1">林心如晒照庆生 与霍建华甜蜜秀恩爱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917417.md#1">庆结婚十周年 郑伊健蒙嘉慧日本街头放闪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918469.md#1">宋仲基官宣结婚 与英籍女友今日登记婚姻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917160.md#1">既长寿又健康 美国82岁医生每天做这6件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916737.md#1">缓解疼痛 抗炎食物该怎么吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917008.md#1">【车评】初试首辆丰田纯电车 2023 Toyota bZ4X Limited</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916109.md#1">运动前吃什么、何时吃最健康？专家荐9种零食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916751.md#1">日本不只有拉面 征服味蕾的还有这些面</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964333.md#1">【中国禁闻】中国地方银行现危机 多行拒赎二级债</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/31/n13919204.htm">纽约东百老汇游民所除石棉 华社遭殃苦无老人住房</a></p><hr>
